[package]
name = "transit-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arguments = "0.8.0"
bincode = "2.0.0"
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive"] }
geo = { version = "0.30.0", features = ["serde", "use-serde"] }
gtfs-structures = "0.44.0"
ittapi = "0.4.0"
osmpbfreader = "0.19.1"
rand = "0.9.0"
rstar = "0.12.2"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
tokio = { version = "1.42.0", features = ["full"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[profile.release]
debug = true
