[package]
name = "routing"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0"
chrono = "0.4.40"
clap = { version = "*", features = ["derive"] }
geo = { version = "0.31.0", features = ["serde", "use-serde"] }
gtfs-structures = "*"
ittapi = "0.4.0"
osmpbfreader = "0.19.1"
rand = "0.9.0"
regex = "*"
ron = "0.11.0"
rstar = "0.12.2"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[profile.release]
debug = true

[[bin]]
name = "test"
path = "src/test.rs"

